2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Added missing space.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/lastlog.8.xml: Document that there might be entries, for
	deleted users, that are not displayed.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chgpasswd.8.xml, man/chpasswd.8.xml: Fix the man page in
	case SHA crypt is not supported.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/vipw.8.xml: MAX_MEMBERS_PER_GROUP is not used by vipw and
	vigr.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.5.xml: Indicate that sg uses the same variables
	as newgrp.
	* man/login.defs.5.xml: vipw does not use any variable.
	* man/login.defs.5.xml: In PAM enabled configurations, login still
	uses some login.defs variables.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/usermod.8.xml: use a <replaceable> instead of a
	<emphasis remap='I'>.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/newusers.8.xml: Document the behavior of newusers for each
	field.
	* man/newusers.8.xml: Do not add the note on PAM on non-PAM
	enabled configurations.

2009-03-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Make sure the SHA related variables are not
	compiled when disabled at configuration time.
	* src/newusers.c: Added FIXME
	* src/chpasswd.c: Make sure the SHA related variables is not
	compiled when disabled at configuration time.
	* src/chgpasswd.c: Make sure the SHA related variables is not
	compiled when disabled at configuration time.
	* src/chgpasswd.c: Fix the test for getlong() failure.
	* src/useradd.c, man/useradd.8.xml: Added long name for the -l
	option: --no-log-init.
	* src/faillog.c: Added support for the specification of a range of
	users with -u.
	* src/faillog.c: Do not call print_one() for users which do not
	exist.